<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.blessedtactics.programs.backpacker.MainActivity">

    <Button
        android:id="@+id/btnPrepareList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_prepare_list_text"
        style="@style/ButtonTheme"
        android:onClick="onClickPrepareList"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnPack" />

    <Button
        android:id="@+id/btnPack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_pack_text"
        style="@style/ButtonTheme"
        android:onClick="onClickPack"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnInfo"
        app:layout_constraintTop_toBottomOf="@+id/btnPrepareList" />

    <Button
        android:id="@+id/btnInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_info_text"
        style="@style/ButtonTheme"
        android:onClick="onClickInfo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPack" />


</android.support.constraint.ConstraintLayout>
